--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
 release.properties
+.idea/
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
@@ -15,3 +16,4 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+.DS_Store
